tests/rustdoc-ui/intra-doc/anchors.stderr
error: `Foo::f#hola` contains an anchor, but links to fields are already anchored
  --> $DIR/anchors.rs:25:15
   |
LL | /// Or maybe [Foo::f#hola].
   |               ^^^^^^-----
   |                     |
   |                     invalid anchor
   |
note: the lint level is defined here
  --> $DIR/anchors.rs:1:9
   |
LL | #![deny(rustdoc::broken_intra_doc_links)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `hello#people#!` contains multiple anchors
  --> $DIR/anchors.rs:31:28
   |
LL | /// Another anchor error: [hello#people#!].
   |                            ^^^^^^^^^^^^--
   |                                        |
   |                                        invalid anchor

error: `Enum::A#whatever` contains an anchor, but links to variants are already anchored
  --> $DIR/anchors.rs:37:28
   |
LL | /// Damn enum's variants: [Enum::A#whatever].
   |                            ^^^^^^^---------
   |                                   |
   |                                   invalid anchor

error: aborting due to 3 previous errors

